--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources>
-
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-
-    </style>
-
-    <style name="SplashTheme">
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowBackground">@drawable/bg_splash</item>
-    </style>
-
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
+  <style name="SplashTheme">
+    <item name="android:windowFrame">@null</item>
+    <item name="android:windowBackground">@drawable/bg_splash</item>
+  </style>
+  <style name="Theme.App.SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Below line is handled by '@expo/configure-splash-screen' command and it's discouraged to modify it manually -->
+    <item name="android:windowBackground">@drawable/splashscreen</item>
+    <!-- Customize your splash screen theme here -->
+  </style>
 </resources>
